# HI3861_WIFI_IOT

./: README.md
DAYU200/: index.ets
local_test/: tcp_client.js  tcp_server.js
pic/: DataFlow.iodraw  HI3861.iodraw
tcpserver/: BUILD.gn  net_common.h  net_demo.h  net_params.h  onenet.h  onenet_mqtt.c  onenet_mqtt_entry.c  storage.c  storage.h  tcp_server.c  thread.c  thread.h  wifi_connecter.c  wifi_connecter.h
