#Copyright (C) 2021 HiHope Open Source Organization .
#Licensed under the Apache License, Version 2.0 (the "License");
#you may not use this file except in compliance with the License.
#You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
#Unless required by applicable law or agreed to in writing, software
#distributed under the License is distributed on an "AS IS" BASIS,
#WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#See the License for the specific language governing permissions and
#

static_library("tcpserver") {
    sources = ["tcp_server.c"]
    # sources += ["wifi_connecter.c","storage.c","thread.c",]
    sources += ["wifi_connecter.c","onenet_mqtt_entry.c","onenet_mqtt.c","storage.c","thread.c",]
    include_dirs = [
        "//utils/native/lite/include",
        "//kernel/liteos_m/kal/cmsis",
        "//device/hisilicon/hispark_pegasus/sdk_liteos/third_party/lwip_sack/include",
        "//foundation/communication/wifi_lite/interfaces/wifiservice",
        "//base/iot_hardware/peripheral/interfaces/kits",
        "//third_party/cJSON",
        "//third_party/pahomqtt/MQTTPacket/src",
        "//third_party/pahomqtt/MQTTClient-C/src",
        "//third_party/pahomqtt/MQTTClient-C/src/liteOS",
    ]
    deps = [
        "//third_party/pahomqtt:pahomqtt_static",
    ]
}